# hasky

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  checksums.txt  docker-compose.yml  rustfmt.toml
.github/workflows/: ci.yml
src/: algorithm.rs  cli.rs  command.rs  hash.rs  lib.rs  main.rs  output.rs  verbosity.rs
tests/: cli_tests.rs  test_algorithm.rs  test_batch_mode.rs  test_flags.rs  test_format.rs  test_hash_file.rs  test_hash_text.rs  test_help.rs  test_insecure.rs  test_stdin.rs  test_verify.rs
tests/common/: mod.rs
