[package]
name = "hashy"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
description = "A fast, flexible CLI for hashing with multiple algorithms"
repository = "https://github.com/yourusername/hashy"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[[bin]]
name = "hashy"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

